# pgedr

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  edr.properties  ontop.obda  owl.xml  pygeoapi.config.yml  pyproject.toml  r2rml.ttl
.github/workflows/: flake8.yml  pypi.yml  test.yml
docker/: entrypoint.sh
src/pg_edr/: edr.py  lib.py
src/pgedr/: __init__.py  lib.py  otel.py
src/pgedr/sql/: __init__.py  lib.py  rise.py
tests/: test_mysql_edr.py  test_postgres_edr.py  test_rise_edr.py
tests/data/mysql/: airport-mysql.sql
tests/data/postgres/: quickstart_schema.sql  readme.md  y01_quickstart_schema_with_data.sql  z01_waterservices_timeseries_metadata_vw.sql  z01_waterservices_timeservices_daily_vw.sql  zquickstart_schema_with_data.sql
